--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(SkyStyle
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        weather.h
+        weather.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET SkyStyle APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
@@ -43,6 +45,8 @@ else()
 endif()
 
 target_link_libraries(SkyStyle PRIVATE Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::Network)
+
+set(RESOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/resources)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
