Adding new clothes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         clothes.h
         outfitmanager.cpp
         outfitmanager.h
+        addclothing.cpp
+        addclothing.h
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET SkyStyle APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
